WebCore/rendering/RenderObjectChildList.cpp
@@ -234,17 +234,42 @@ void RenderObjectChildList::insertChildNode(RenderObject* owner, RenderObject* c
 static RenderObject* beforeAfterContainer(RenderObject* container, PseudoId type)
 {
     if (type == BEFORE) {
+        // An anonymous (generated) inline run-in that has PseudoId BEFORE must come from a grandparent.
+        // Therefore we should skip these generated run-ins when checking our immediate children.
+        // If we don't find our :before child immediately, then we should check if we own a
+        // generated inline run-in in the next level of children.
         RenderObject* first = container;
         do {
-            // Skip list markers.
+            // Skip list markers and generated run-ins
             first = first->firstChild();
-            while (first && first->isListMarker())
+            while (first && (first->isListMarker() || (first->isRenderInline() && first->isRunIn() && first->isAnonymous())))
                 first = first->nextSibling();
         } while (first && first->isAnonymous() && first->style()->styleType() == NOPSEUDO);
-        if (first && first->style()->styleType() != type)
+
+        if (!first)
             return 0;
-        return first;
+
+        if (first->style()->styleType() == type)
+            return first;
+
+        // Check for a possible generated run-in, using run-in positioning rules.
+        // Skip inlines and floating / positioned blocks, and place as the first child.
+        first = container->firstChild();
+        if (!first->isRenderBlock())
+            return 0;
+        while (first && first->isFloatingOrPositioned())
+            first = first->nextSibling();
+        if (first) {
+            first = first->firstChild();
+            // We still need to skip any list markers that could exist before the run-in.
+            while (first && first->isListMarker())
+                first = first->nextSibling();
+            if (first && first->style()->styleType() == type && first->isRenderInline() && first->isRunIn() && first->isAnonymous())
+                return first;
+        }
+        return 0;
     }
+
     if (type == AFTER) {
         RenderObject* last = container;
         do {
@@ -314,7 +339,7 @@ void RenderObjectChildList::updateBeforeAfterContent(RenderObject* owner, Pseudo
     // Whether or not we currently have generated content attached.
     bool oldContentPresent = child;
 
-    // Whether or not we now want generated content.  
+    // Whether or not we now want generated content.
     bool newContentWanted = pseudoElementStyle && pseudoElementStyle->display() != NONE;
 
     // For <q><p/></q>, if this object is the inline continuation of the <q>, we only want to generate
@@ -330,9 +355,9 @@ void RenderObjectChildList::updateBeforeAfterContent(RenderObject* owner, Pseudo
     // If we don't want generated content any longer, or if we have generated content, but it's no longer
     // identical to the new content data we want to build render objects for, then we nuke all
     // of the old generated content.
-    if (!newContentWanted || (oldContentPresent && Node::diff(child->style(), pseudoElementStyle) == Node::Detach)) {
+    if (oldContentPresent && (!newContentWanted || Node::diff(child->style(), pseudoElementStyle) == Node::Detach)) {
         // Nuke the child. 
-        if (child && child->style()->styleType() == type) {
+        if (child->style()->styleType() == type) {
             oldContentPresent = false;
             child->destroy();
             child = (type == BEFORE) ? owner->virtualChildren()->firstChild() : owner->virtualChildren()->lastChild();
